<?xml version="1.0"?>
<package>
  <name>uarm_metal</name>
  <version>0.0.1</version>
  <description>uArm Metal ROS interface package</description>

  <maintainer email="aransena@gmail.com">Aran Sena</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>